TAG: derivationload-4-2-1-2
DATE: 04-07-2009
STAFF:  sc
CHANGES: Updated to use allele type vocab for
   derivation type - TR7493

TAG: derivationload-4-2-1-1
DATE: 04-02-2009
STAFF:  sc
CHANGES: Initial commit TR7493 